# CMSIS-DSP

Source/: CMakeLists.txt  configDsp.cmake
Source/DistanceFunctions/: Config.cmake
